<resources>
    <string name="app_name">点巡检</string>
    <string name="service_disconnect">服务已断开</string>
    <string name="str_common_type">通用模型</string>
    <string name="str_frame_src">数据来源</string>
    <string name="str_is_pre_process">是否预处理</string>
    <string name="cpu_count">VPU数目</string>
    <string name="str_cache_memory">缓存内存</string>
    <string name="str_scratch_memory">模型内存</string>
    <string name="str_input_data_format">InputFormat</string>
    <string name="str_output_data_format">OutputFormat</string>
    <string name="acceleration_text">加速度：%s</string>
    <string name="tempture_text">温度：%s</string>
    <string name="oritation_text">欧拉角：%s</string>
    <string name="device_connected">设备已连接</string>
    <string name="device_disconnect">设备未连接</string>
    <string name="ai_no_support">该设备不支持分辨率为:%s帧率为%s</string>
    <string name="ai_aiclient_null">获取到aiclient为空</string>
    <string name="ai_pic_type_error">图片类型不是jpg、yuv、png格式</string>
    <string name="ai_detectresult_null">取到DetectResult为空或者DetectResult中无数据</string>
    <string name="ai_recognize_null">识别结果为空</string>
    <string name="ai_caclatepic_null">计算图片结果为空</string>
    <string name="ai_loadpic_error">加载图片时异常</string>
    <string name="ai_coordinates_null">未获取到坐标</string>
    <string name="ai_file_null">文件未获取到</string>
    <string name="ai_writefile_error">文件写入错误</string>
    <string name="ai_md5_error">获取MD5出错</string>
    <string name="open_wifi_peremission">请开启WIFI权限</string>
    <string name="start_rtsp_server">正在开启RTSP服务</string>

    <string name="prompt">提示</string>
    <string name="camera_resolution">设置分辨率</string>
    <string name="camera_open">打开相机</string>
    <string name="camera_close">关闭相机</string>
    <string name="camera_opened">相机已打开</string>
    <string name="camera_config">相机配置</string>
    <string name="camera_fail">打开相机出错</string>
    <string name="select_file">选择文件</string>
    <string name="ai_prompt_msg1">请去设置-应用打开存储权限</string>
    <string name="ai_prompt_msg2">存储权限是必须的</string>
    <string name="ai_prompt_msg3">请启动CAL模型用于添加人脸</string>
    <string name="ai_prompt_msg4">请先打开存储权限</string>
    <string name="ai_prompt_msg5">没有存储权限</string>
    <string name="ai_prompt_msg6">请选择正确的模型</string>
    <string name="ai_prompt_msg7">请输入文件名称</string>
    <string name="ai_prompt_msg8">请输入截取图片名称</string>
    <string name="ai_prompt_msg9">为了Camera参数生效，请重启Camera！！！</string>
    <string name="ai_prompt_msg10">非私有模式</string>
    <string name="ai_prompt_msg11">已加载人脸模型</string>
    <string name="ai_prompt_msg12">当前解析模式：检测解析模式</string>
    <string name="ai_prompt_msg13">选择需要检测服务ID</string>
    <string name="ai_prompt_msg14">请重启人脸业务%s生效</string>
    <string name="ai_prompt_msg15">正在加载%s模式</string>
    <string name="ai_prompt_msg16">未发现人脸</string>
    <string name="ai_prompt_msg17">发现多张人脸</string>
    <string name="ai_prompt_msg18">人脸宽度条件不符合</string>
    <string name="ai_prompt_msg19">人脸角度不符合</string>
    <string name="ai_prompt_msg20">人脸清晰度不符合</string>
    <string name="ai_prompt_msg21">已加载%s模型</string>
    <string name="ai_prompt_msg22">姓名:%s \n相似度:%f</string>
    <string name="ai_select_parameters">选择显示的参数</string>
    <string name="ai_face_not_init">人脸未初始化</string>
    <string name="ai_face_not_start_model">人脸模型未启动</string>
    <string name="ai_face_stop_loop_add">停止循环添加</string>
    <string name="ai_face_start_model">启动人脸识别%s模式</string>
    <string name="ai_face_send_rec_status">发送识别状态</string>
    <string name="ai_face_send_yaw">设置人脸角度</string>
    <string name="ai_face_yaw">人脸角度</string>
    <string name="ai_face_send_sharpness">设置清晰度</string>
    <string name="ai_face_sharpness">人脸清晰度</string>
    <string name="ai_face_start">启动人脸识别</string>
    <string name="ai_select_public_model">选择公有模型</string>
    <string name="ai_face_reDetect">人脸重新检测</string>
    <string name="ai_pause">暂停</string>
    <string name="ai_resume">恢复</string>
    <string name="ai_stop">停止</string>
    <string name="ai_send_status">发送状态</string>
    <string name="ai_stop_model">请选择关闭模型</string>
    <string name="ai_stop_error">停止%s</string>
    <string name="ai_select_model_id">选择业务Id</string>
    <string name="ai_current_model">当前运行模式:</string>
    <string name="ai_model_face">人脸模式</string>
    <string name="ai_model_detect">检测模式</string>
    <string name="ai_model_sort">分类模式</string>
    <string name="ai_prepare_running_task">待运行的AI任务:</string>
    <string name="ai_is_running">已启动%s</string>
    <string name="ai_is_loading_public_model">正在加载公共模型</string>
    <string name="ai_add_success">添加成功</string>
    <string name="ai_result">结果：</string>
    <string name="ai_setting_result_count">识别结果显示个数：%s</string>
    <string name="ai_setting_face_width">人脸宽度：%d</string>
    <string name="ai_setting_face_sharpness">人脸清晰度：%d</string>
    <string name="ai_setting_face_yaw">人脸角度：%f</string>
    <string name="ai_setting_face_similar">人脸识别相似度：%f ,范围0~100</string>
    <string name="ai_setting_face_detect_interval">检测间隔：%d</string>
    <string name="ai_setting_face_detect_interval2">检测间隔：</string>

    <string name="push_rtmp_title">RTMP</string>

</resources>
