<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:gravity="center"
        android:visibility="visible">

        <SurfaceView
            android:id="@+id/sf_camera"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.llvision.glass3.api.test.common.ui.SurfaceViewOverlay
            android:id="@+id/sf_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/img_ai_fov"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="16dp"
            android:src="@drawable/btn_fov_10x2x" />

        <LinearLayout
            android:id="@+id/ll_face"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_face"
                android:layout_width="60dp"
                android:layout_height="60dp" />

            <TextView
                android:id="@+id/tv_infor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffff" />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_qr_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/holo_green_light"

            android:layout_alignParentBottom="true"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_parameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/tv_model_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/ai_prompt_msg12" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:paddingLeft="10dp"
                android:text="@string/camera_resolution" />

            <Button
                android:id="@+id/btn_camera_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="1280/720/30" />

            <Button
                android:id="@+id/btn_open_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera_open"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:paddingLeft="10dp"
                android:text="Ai test" />

            <TextView
                android:id="@+id/tv_model_path"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_select_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_select_public_model" />

            <Button
                android:id="@+id/btn_select_private_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_face_start" />

            <TextView
                android:id="@+id/tv_filepath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="10dp" />

            <Button
                android:id="@+id/btn_select_file"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_file" />

            <TextView
                android:id="@+id/tv_classify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_resume"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_resume"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_pause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_pause"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_redetect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_face_reDetect"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_send_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_face_send_rec_status"
                android:visibility="visible" />

            <Button
                android:id="@+id/btn_send_yaw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_face_send_yaw" />

            <Button
                android:id="@+id/btn_send_definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_face_send_sharpness" />

            <Button
                android:id="@+id/btn_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ai_stop"
                android:visibility="visible" />

        </LinearLayout>


    </ScrollView>


</RelativeLayout>
